@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now using a filefinder to find all modules to check -- now only
+            checking files in lib/ by default
 
 0.006     2013-12-07 22:27:04Z
           - now also checking for develop prereqs, that aren't listed in
